--- a/css/style.css
+++ b/css/style.css
@@ -280,30 +280,182 @@ body{
     width: 100%;
     display: flex;
     flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
 }
 
 .about{
-    height: 100vh;
+    height: 110vh;
     width: 100%;
-    background-color: var(--SEACOLOR);    
     background-image: linear-gradient(var(--SEACOLOR),white);
-    position:relative;
+    display: grid;
+    grid-template-columns: repeat(8,1fr);
+    grid-template-areas: "top top top top top top top top"
+    "left content content content content content content right"
+    "left skill skill skill skill skill skill right"
+    "line line line line line line line line";
+    grid-template-rows: 20vh 60vh 20vh 10vh;
+}
+
+.top{
+    grid-area: top;
+    /* background-color: lightslategray; */
+}
+
+.left{
+    grid-area:left;
+    /* background-color: lightblue; */
+    display: grid;
+    grid-template-columns: 1fr;
+    align-content: end;
+    justify-items: center;
+}
+
+/* center main Content*/
+.content{
+    grid-area: content;
+    /* background-color: antiquewhite; */
+    display: grid;
+    grid-template-columns: 20% auto;
+    justify-content: space-between;
+    align-items: center;
+    gap: 12px;
+}
+
+.main .about .content .myPhoto{
+    border-radius: 15px;
+    box-shadow: 2px 2px 10px white;
+    transform: rotate(-10deg);
+    opacity: 0.9;
+    transition: 2s;
+    border: 1px solid white;
+    padding: 6px
 }
 
 
+.main .about .content .myPara{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 12px;
+    letter-spacing: 1px;
+    opacity: 0.8;
+}
 
-.about .anchor{
-    position: absolute;
-    width: 60PX;
-    height: 60px;
-    left:0;
-    top:90%;
+.right{
+    grid-area: right;
+    /* background-color: #865326; */
+    display:grid;
+    grid-template-columns: 1fr;
+    grid-template-areas: "anim" "fish";
+    grid-template-rows: auto 40%;
+    justify-items: center;
+}
+
+.right .shark{
     opacity: 0.6;
-    transform: rotate(30deg);
+}
+
+.skillBar{
+    grid-area: skill;
+    /* background-color: #f1889b; */
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+.skillBar .skillSet{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.skillList{
+    list-style: none;
+    display: grid;
+    grid-template-columns: repeat(7,1fr);
+    grid-template-rows: 100%;
+    align-items: center;
+    place-content: center;
+}
+
+.skillList li{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+.main .about .lineBar{
+    grid-area: line;
+    width: 100%;
+    height: 100%;
+    /* background-color: aqua; */
+    display: flex;    
+    justify-content: center;
+    align-items: center;
+}
+
+.main .about .lineBar .line{
+    width: 90%;
+    height: 3px;
+    background-color: black;
+    opacity: 0.6;
+}
+
+.octopus{
+    opacity: 0.6;
 }
 
 
 
+/**************  Profiles**************/
+
+
+.profiles{
+    width: 100%;
+    height: 120vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+.profiles .profileEnvironment{
+    height: 120vh;
+    width: 100%;  
+    background-image: url("/images/Mountain.png");
+    /* #233825  tree color*/ 
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 100%;
+
+    display: grid;
+    place-content: center;
+}
+
+.profiles .profileEnvironment h1{
+    text-align: center;
+}
+
+.profiles .profileEnvironment .profileLinks{
+    height: 80vh;
+    width:100%;
+    display:grid;
+    gap: 6px;
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: 50px 50px;
+    place-content: center;
+}
+
+.profiles .profileEnvironment .profileLinks a{
+    display: grid;
+    place-content: center;
+}
+
+.project{
+    min-height: 80vh;
+    width: 100%;
+    background-color: white;
+}
 
 /******** Mobile Screen**********/
 
