--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,10 @@ html{
     font-weight: 800;
 }
 
+.white{
+    color: white;
+}
+
 .dull{
     opacity: 0.5;
     font-weight: 800;
@@ -130,7 +134,7 @@ body{
     display: block;
     padding: 1rem;   
     color: var(--GREY);
-    transition: 4s;
+    transition: 1s;
     transform: rotateX(90deg);
 }
 
@@ -285,7 +289,7 @@ body{
 }
 
 .about{
-    height: 110vh;
+    height: 120vh;
     width: 100%;
     background-image: linear-gradient(var(--SEACOLOR),white);
     display: grid;
@@ -326,9 +330,10 @@ body{
     border-radius: 15px;
     box-shadow: 2px 2px 10px white;
     transform: rotate(-10deg);
-    opacity: 0.9;
+    opacity: 0.8;
     transition: 2s;
     border: 1px solid white;
+    background-color: azure;
     padding: 6px
 }
 
@@ -339,7 +344,7 @@ body{
     align-items: center;
     padding: 12px;
     letter-spacing: 1px;
-    opacity: 0.8;
+    color: rgb(7, 59, 63)
 }
 
 .right{
@@ -412,7 +417,7 @@ body{
 
 .profiles{
     width: 100%;
-    height: 120vh;
+    min-height: 70vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -420,42 +425,312 @@ body{
 }
 
 .profiles .profileEnvironment{
-    height: 120vh;
+    height: 70vh;
     width: 100%;  
-    background-image: url("/images/Mountain.png");
+    background-image: url("/images/mountain.png");
     /* #233825  tree color*/ 
     background-repeat: no-repeat;
     background-position: center;
     background-size: 100%;
 
-    display: grid;
-    place-content: center;
+    display:grid;
+    grid-template-columns: repeat(6,24%);
+    grid-template-areas: "title links links links links links"
+    "cv links links links links links"
+    "cv links links links links links";
+    grid-template-rows: 8vh 40vh 40vh;
+
+    padding:  0 40px;
 }
 
+.profiles .profileEnvironment .resume{
+    grid-area: cv;
+    height:50%;
+    display:flex;
+    align-items: start;
+    justify-content: start;
+    padding: 32px 0 0 16px;
+}
+
+.profiles .profileEnvironment .resume .mycv .cvButton{
+    border: 1px solid black;
+    padding: 16px 25px;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    opacity: 0.9;
+    font-weight: 700;
+    
+}
+
+.downloadIcon{
+    padding: 0 0 0 12px;
+    width: 40px;
+    opacity: 0.6;
+}
+
+
+
 .profiles .profileEnvironment h1{
-    text-align: center;
+    text-align: start;
+    width: 100%;
+    height: auto;
+    letter-spacing: 2px;
+    font-weight: 800;
+    font-size: 1.5rem;
+    padding-left: 20px;
+    grid-area: title;
 }
 
 .profiles .profileEnvironment .profileLinks{
-    height: 80vh;
-    width:100%;
-    display:grid;
-    gap: 6px;
-    grid-template-columns: repeat(3,1fr);
-    grid-template-rows: 50px 50px;
-    place-content: center;
+    width: 40%;
+    height: 40%;
+
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-area:links; 
+    align-items: start;
 }
 
-.profiles .profileEnvironment .profileLinks a{
-    display: grid;
-    place-content: center;
+
+.linkWrap{
+    display: flex;
+    align-items: center;
+    justify-content: start;
 }
+
+.profiles .profileEnvironment .profileLinks .linkWrap img{
+    width: 30px;
+    height:auto;
+    opacity: 0.7;
+}
+
+
+.profiles .profileEnvironment .profileLinks .linkWrap a{
+    text-decoration: none;
+    padding: 6px;
+    color: grey;
+}
+
+
+/************Project******************/
 
 .project{
-    min-height: 80vh;
+    height: 100vh;
     width: 100%;
-    background-color: white;
+    background-color: #81d4e3;
+    background-image: linear-gradient(#81d4e3,rgb(231, 231, 231));
+
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    grid-template-areas: "title title title title"
+    "items items items items"
+    "display display content content"
+    "display display content content";
+
+    grid-template-rows: 6vh 16vh;
+    grid-auto-rows: 30vh;
+    overflow: hidden;
 }
+
+.project h1{
+    align-content: center;
+    width: 100%;
+    /* background-color: red; */
+    grid-area: title;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.5rem;
+    font-weight: 800;
+
+}
+.project .listItems{
+    grid-area: items;
+    /* background-color: #865326; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.project .listItems ul{
+    display: flex;
+    list-style: none;
+    justify-content: center;
+    align-items: center;
+}
+
+.project .listItems ul li{
+    margin: 6px;
+    padding: 6px;
+    cursor: pointer;
+}
+
+.project .display{
+    /* background-color: grey; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    grid-area: display;
+        
+}
+
+.project .display .laptop{
+    width: 70%;
+    height:60%;
+
+    background-image: url("/images/project/laptop.png");
+    background-position: center;
+    background-size: 90%;
+    background-repeat: no-repeat;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    /* border: 1px solid black; */
+}
+
+.project .laptop .screen{
+    /* display: flex; */
+    position: inherit;
+    /* align-items: start;
+    justify-content: center; */
+    width:20.5vw;
+    height:12vw;
+}
+
+.project .laptop .screen img{
+    height: 97%;
+    width: 100%;
+}
+
+
+.project .projectContent{
+    grid-area: content;
+    /* background-color: #78D7F1; */
+
+    display:flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.project .projectContent .details{
+    width: 80%;
+    height:25%;
+    overflow-y: scroll;
+    padding: 20px;
+    scrollbar-width: none;
+    scrollbar-color: white;
+}
+
+.project .projectContent .details div{
+    margin-bottom: 2vw;
+}
+/**** Hover Section ****/
+
+.project .listItems ul li:hover{
+    transition: 0.5s;
+    color: white;
+}
+
+
+/*********contact *****/
+
+.contact{
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.contact .contactEnvinonment{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.contact .contactEnvinonment .form{
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.contact .contactEnvinonment .form .formWrapper{
+    width: 80%;
+    height: 80%;
+    display: grid;
+    grid-template-columns: 30% 40%;
+    gap: 0.5em;
+    grid-auto-rows: 10vh;
+    justify-content: end;
+}
+
+
+.contact .contactEnvinonment .form .formWrapper label{
+    width: 40%;
+}
+
+.contact .contactEnvinonment .form .formWrapper input{
+    width: 60%;
+    height: 50%;
+}
+/******Footer********/
+
+
+.footer{
+    height: 30vh;
+    width: 100%;
+    background-color: rgb(122, 119, 119);
+
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column wrap;
+    gap: 30px;
+}
+
+.footer .follow{
+    display:flex;
+    gap: 16px;
+}
+.footer .follow h1{
+    color: black;
+}
+.footer p{
+    font-weight: 600;
+}
+.footer p span{
+    color: white;
+    opacity: 0.8;
+}
+.footer .follow ul{
+    list-style: none;
+    display:flex;
+}
+
+.footer .follow ul li{
+    width: 26px;
+    margin: 0 12px;
+}
+.footer .follow ul li a img{
+    opacity: 0.6;
+}
+
 
 /******** Mobile Screen**********/
 
