about section animated and images added

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Style+Script&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gochi+Hand&display=swap');
 
 /*
 font-family: 'Open Sans', sans-serif;
@@ -148,9 +149,9 @@ body{
 }
 
 
-/*******************Front Page *****************/
+/*******************Top Section *****************/
 
-.topSection{
+.main .topSection{
     width: 100%;
     min-height: 100vh;
     display: flex;
@@ -162,9 +163,9 @@ body{
 .frontPage{
     width:100%;
     height: 100vh;
-  }
+}
 
-.topSection .cloud{
+.main .topSection .cloud{
     width: 30%;
     position: absolute;
     right: 20rem;
@@ -172,8 +173,7 @@ body{
     transition: 4s;
 }
 
-
-.topSection .boat{
+.main .topSection .boat{
     width: 20%;
     opacity: 0.5;
     position: absolute;
@@ -288,134 +288,269 @@ body{
     align-items: center;
 }
 
+
+
+/*******************About*********************/
+
+
+.aboutContainer{
+    background-image: linear-gradient(#78D7F1,white);
+    width: 100%;
+    min-height: 120vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    overflow: hidden;
+    position: relative;
+}
+
+.aboutContainer .snow{
+    position: absolute;
+    opacity: 0.2;
+    top:0;
+    left:0;
+}
+
+.aboutContainer .glacierWall{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    opacity: 0.5;
+    z-index: 0;
+}
+
 .about{
-    height: 120vh;
+    background-color: transparent;
+    min-height:100vh;
     width: 100%;
-    background-image: linear-gradient(var(--SEACOLOR),white);
     display: grid;
-    grid-template-columns: repeat(8,1fr);
-    grid-template-areas: "top top top top top top top top"
-    "left content content content content content content right"
-    "left skill skill skill skill skill skill right"
-    "line line line line line line line line";
-    grid-template-rows: 20vh 60vh 20vh 10vh;
+    grid-template-columns: repeat(10,1fr);
+
+    grid-template-areas: 
+    "content content content content content content tech tech tech ";
+    overflow: hidden;
+
+    padding: 32px 0 0 0;
+
+    grid-template-rows: 100vh 10vh;
+    z-index: 1;
 }
 
-.top{
-    grid-area: top;
-    /* background-color: lightslategray; */
-}
 
-.left{
-    grid-area:left;
-    /* background-color: lightblue; */
-    display: grid;
-    grid-template-columns: 1fr;
-    align-content: end;
-    justify-items: center;
-}
-
-/* center main Content*/
 .content{
+    background-color: transparent;
     grid-area: content;
-    /* background-color: antiquewhite; */
+    padding: 20px;
+    z-index: 3;
+
     display: grid;
-    grid-template-columns: 20% auto;
+    grid-template-columns: 10vw 40vw;
+    grid-auto-rows: auto;
     justify-content: space-between;
-    align-items: center;
-    gap: 12px;
+    align-items: start;
+    width: 100%;
+    height: 100%;
 }
 
-.main .about .content .myPhoto{
-    border-radius: 15px;
-    box-shadow: 2px 2px 10px white;
-    transform: rotate(-10deg);
-    opacity: 0.8;
-    transition: 2s;
-    border: 1px solid white;
-    background-color: azure;
-    padding: 6px
+.content .aboutHeading{
+    width: 21vw;
+    transform: rotate(-90deg);
+    letter-spacing: 2px;
+    padding: 20px;
+    color: rgb(55, 182, 196);
+    font-family: 'Gochi Hand', cursive;
+    font-size: 36px;
+    letter-spacing: 5px;
+    font-weight: 200;
+
+    transition: 5s;
 }
 
 
-.main .about .content .myPara{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 12px;
+
+.content p{
+    text-align: justify;
     letter-spacing: 1px;
-    color: rgb(7, 59, 63)
+    word-spacing: 2px;
+    width: 40vw;
+    height: 0%;
+    padding: 36px;
+    color: rgb(27, 97, 102);
+
+    box-shadow: 1px 2px 4px white;
+    border-radius: 10px;
+
+    overflow: hidden;
+    transition: 5s;
 }
 
-.right{
-    grid-area: right;
-    /* background-color: #865326; */
-    display:grid;
-    grid-template-columns: 1fr;
-    grid-template-areas: "anim" "fish";
-    grid-template-rows: auto 40%;
-    justify-items: center;
-}
 
-.right .shark{
-    opacity: 0.6;
-}
 
-.skillBar{
-    grid-area: skill;
-    /* background-color: #f1889b; */
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-}
-.skillBar .skillSet{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.skillList{
-    list-style: none;
+.tech{
+    background-color: transparent;
+    grid-area: tech;
+
     display: grid;
-    grid-template-columns: repeat(7,1fr);
-    grid-template-rows: 100%;
-    align-items: center;
-    place-content: center;
+    grid-auto-rows: 30vh;
+    place-items: center;
+    
 }
 
-.skillList li{
+.tech h3{
+    opacity: 0.8;
+    letter-spacing: 12px;
+    color: black;
+    font-family: 'Gochi Hand', cursive;
+    transform: rotateX(90deg);
+    transition: 3s;    
+}
+
+
+.tech .skillSet{
+    background-color: transparent;
     display: flex;
+    align-items: center;
     justify-content: center;
-    text-align: center;
 }
-.main .about .lineBar{
-    grid-area: line;
-    width: 100%;
-    height: 100%;
-    /* background-color: aqua; */
-    display: flex;    
+
+.tech .skillSet .skillList{
+    display: grid;
+    list-style: none;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 32px;
+    padding: 20px;
+}
+
+.tech .skillSet .skillList img{
     justify-content: center;
     align-items: center;
+    transition: 1s;
+    margin: 12px;
+    width : 0%;
+    display: flex;
+
+    border-radius: 150%;
+    box-shadow: 1px 2px 10px white;
+    padding: 6px;
 }
 
-.main .about .lineBar .line{
-    width: 90%;
-    height: 3px;
-    background-color: black;
-    opacity: 0.6;
+.tech .skillSet .skillList img:nth-child(1){
+    transition-delay: 0.2s;
 }
 
-.octopus{
-    opacity: 0.6;
+.tech .skillSet .skillList img:nth-child(2){
+    transition-delay: 0.4s;
+}
+.tech .skillSet .skillList img:nth-child(3){
+    transition-delay: 0.5s;
+}
+.tech .skillSet .skillList img:nth-child(4){
+    transition-delay: 0.4s;
+}
+.tech .skillSet .skillList img:nth-child(5){
+    transition-delay: 0.5s;
+}
+.tech .skillSet .skillList img:nth-child(6){
+    transition-delay: 0.6s;
+}
+.tech .skillSet .skillList img:nth-child(7){
+    transition-delay: 0.5s;
+}
+.tech .skillSet .skillList img:nth-child(8){
+    transition-delay: 0.6s;
 }
 
+.bubbles img{
+    width: 50px;
+    height: auto;
+    animation: float 7s infinite linear;
+}
+
+.bubbles{
+    grid-area: bubble;
+
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: space-around;
+    place-items: center;
+
+    position: absolute;
+    bottom:0;
+    right: 0;
+}
+
+.bubbles .flake{
+    opacity: 0.8;
+}
+
+
+
+@keyframes float{
+    0%{
+        transform: translateY(0);
+        opacity: 1;
+    }25%{
+        opacity: 1;
+    }
+    50%{
+        opacity: 0.5;
+    }75%{
+        opacity: 0.5;
+    }
+    100%{
+        transform: translateY(-90vh);
+        opacity:0;
+    }
+}
+
+.bubbles img:nth-child(1){
+ width: 50px;
+ animation-delay: 2s;
+}
+
+.bubbles img:nth-child(2){
+width: 35px;
+animation-delay: 5s;
+}
+
+.bubbles img:nth-child(3){
+    animation-delay: 1s;
+    width: 60px;
+}
+.bubbles img:nth-child(4){
+    animation-delay: 3s;
+    width: 45px;
+}
+.bubbles img:nth-child(5){
+    animation-delay: 2s;
+    width: 20px;
+}
+.bubbles img:nth-child(6){
+    animation-delay: 5s;
+    width: 30px;
+}
+
+.bubbles img:nth-child(7){
+    animation-delay: 1s;
+    width: 50px;
+}
+.bubbles img:nth-child(8){
+    animation-delay: 4s;
+    width: 25px;
+}
+.bubbles img:nth-child(9){
+    animation-delay: 2s;
+    width: 40px;
+}
 
 
 /**************  Profiles**************/
 
 
 .profiles{
+    margin-top: 25vh;
     width: 100%;
     min-height: 70vh;
     display: flex;
@@ -427,7 +562,7 @@ body{
 .profiles .profileEnvironment{
     height: 70vh;
     width: 100%;  
-    background-image: url(images/mountain.png);
+    background-image: url('/images/mountain.png');
     /* #233825  tree color*/ 
     background-repeat: no-repeat;
     background-position: center;
@@ -521,7 +656,7 @@ body{
     height: 100vh;
     width: 100%;
     background-color: #81d4e3;
-    background-image: linear-gradient(#81d4e3,rgb(231, 231, 231));
+    background-image: linear-gradient(#81d4e3,rgb(255, 255, 255));
 
     display: grid;
     grid-template-columns: repeat(4,1fr);
@@ -648,6 +783,9 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
+
+    position: relative;
 }
 
 .contact .contactEnvinonment{
@@ -689,13 +827,19 @@ body{
     width: 60%;
     height: 50%;
 }
+
+.contact img{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
 /******Footer********/
 
 
 .footer{
     height: 30vh;
     width: 100%;
-    background-color: rgb(122, 119, 119);
+    background-color: #FE6A8B;
 
     display:flex;
     justify-content: center;
@@ -708,27 +852,27 @@ body{
     display:flex;
     gap: 16px;
 }
-.footer .follow h1{
-    color: black;
+.footer .follow h4{
+    color: pink;
+    font-weight: 100;
 }
+
 .footer p{
-    font-weight: 600;
+    font-weight: 300;
+    color:black;
 }
 .footer p span{
     color: white;
     opacity: 0.8;
 }
-.footer .follow ul{
-    list-style: none;
-    display:flex;
+
+.footer .follow a{
+    width: 30px;
 }
 
-.footer .follow ul li{
-    width: 26px;
-    margin: 0 12px;
-}
-.footer .follow ul li a img{
+.footer .follow img{
     opacity: 0.6;
+    border-radius: 150%;
 }
 
 
@@ -788,7 +932,7 @@ body{
         letter-spacing: 0.2rem;
     }
 
-    .topSection .cloud{
+    .main .topSection .cloud{
         bottom: 0;
         left: 0;
         width: 60%;
@@ -801,7 +945,7 @@ body{
         height: 100px;
     }
 
-    .topSection .boat{
+    .main .topSection .boat{
         width: 50%;
         bottom: 3rem;
         left: 0rem;
@@ -817,7 +961,7 @@ body{
         height: 90px;
     }
 
-    .topSection .frontPage{
+    .main .topSection .frontPage{
         margin-bottom: 0px;
         overflow:hidden;
     }
