--- a/css/style.css
+++ b/css/style.css
@@ -186,7 +186,7 @@ body{
 
 .wheel{
     position: absolute;
-    opacity: 0.4;
+    opacity: 0.3;
     top: 20%;
     left: 20%;
     z-index:20;
@@ -550,27 +550,30 @@ animation-delay: 5s;
 
 
 .profiles{
-    margin-top: 25vh;
+    /* margin-top: 25vh; */
     width: 100%;
-    min-height: 70vh;
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     overflow: hidden;
+
+    position: relative;
+}
+
+.profiles .icyMountain{
+    position: absolute;
+    bottom: 0;
+    left: 0;
 }
 
 .profiles .profileEnvironment{
     height: 70vh;
     width: 100%;  
-    background-image: url('/images/mountain.png');
-    /* #233825  tree color*/ 
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 100%;
 
     display:grid;
     grid-template-columns: repeat(6,24%);
-    grid-template-areas: "title links links links links links"
+    grid-template-areas: "title title title title title title"
     "cv links links links links links"
     "cv links links links links links";
     grid-template-rows: 8vh 40vh 40vh;
@@ -589,7 +592,7 @@ animation-delay: 5s;
 
 .profiles .profileEnvironment .resume .mycv .cvButton{
     border: 1px solid black;
-    padding: 16px 25px;
+    padding: 16px 24px;
     text-decoration: none;
     display: flex;
     align-items: center;
@@ -597,13 +600,15 @@ animation-delay: 5s;
     width: 100%;
     opacity: 0.9;
     font-weight: 700;
-    
+
+    border-radius: 50px;
 }
 
 .downloadIcon{
     padding: 0 0 0 12px;
     width: 40px;
     opacity: 0.6;
+    z-index: 40;
 }
 
 
@@ -627,6 +632,7 @@ animation-delay: 5s;
     grid-template-columns: 1fr 1fr 1fr;
     grid-area:links; 
     align-items: start;
+    z-index: 90;
 }
 
 
@@ -655,129 +661,18 @@ animation-delay: 5s;
 .project{
     height: 100vh;
     width: 100%;
-    background-color: #81d4e3;
-    background-image: linear-gradient(#81d4e3,rgb(255, 255, 255));
-
-    display: grid;
-    grid-template-columns: repeat(4,1fr);
-    grid-template-areas: "title title title title"
-    "items items items items"
-    "display display content content"
-    "display display content content";
-
-    grid-template-rows: 6vh 16vh;
-    grid-auto-rows: 30vh;
-    overflow: hidden;
+    background-color: #82cfdc;
+    background-image: linear-gradient(#82cfdc,rgb(0, 0, 0));
 }
 
-.project h1{
-    align-content: center;
-    width: 100%;
-    /* background-color: red; */
-    grid-area: title;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.5rem;
-    font-weight: 800;
-
-}
-.project .listItems{
-    grid-area: items;
-    /* background-color: #865326; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.project .listItems ul{
-    display: flex;
-    list-style: none;
-    justify-content: center;
-    align-items: center;
-}
-
-.project .listItems ul li{
-    margin: 6px;
-    padding: 6px;
-    cursor: pointer;
-}
-
-.project .display{
-    /* background-color: grey; */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    grid-area: display;
-        
-}
-
-.project .display .laptop{
-    width: 70%;
-    height:60%;
-
-    background-image: url("/images/project/laptop.png");
-    background-position: center;
-    background-size: 90%;
-    background-repeat: no-repeat;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    /* border: 1px solid black; */
-}
-
-.project .laptop .screen{
-    /* display: flex; */
-    position: inherit;
-    /* align-items: start;
-    justify-content: center; */
-    width:20.5vw;
-    height:12vw;
-}
-
-.project .laptop .screen img{
-    height: 97%;
-    width: 100%;
-}
-
-
-.project .projectContent{
-    grid-area: content;
-    /* background-color: #78D7F1; */
-
-    display:flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.project .projectContent .details{
-    width: 80%;
-    height:25%;
-    overflow-y: scroll;
-    padding: 20px;
-    scrollbar-width: none;
-    scrollbar-color: white;
-}
-
-.project .projectContent .details div{
-    margin-bottom: 2vw;
-}
-/**** Hover Section ****/
-
-.project .listItems ul li:hover{
-    transition: 0.5s;
-    color: white;
-}
 
 
 /*********contact *****/
 
 .contact{
+    background-color:white;
     width: 100%;
-    height: 100vh;
+    height: 120vh;
     overflow: hidden;
     display: flex;
     flex-direction: column;
@@ -832,14 +727,15 @@ animation-delay: 5s;
     position: absolute;
     bottom: 0;
     left: 0;
+    opacity: 0.9;
 }
 /******Footer********/
 
 
 .footer{
-    height: 30vh;
+    height: 20vh;
     width: 100%;
-    background-color: #FE6A8B;
+    background-color: #F6F6F7;
 
     display:flex;
     justify-content: center;
@@ -853,7 +749,7 @@ animation-delay: 5s;
     gap: 16px;
 }
 .footer .follow h4{
-    color: pink;
+    color: red;
     font-weight: 100;
 }
 
@@ -862,7 +758,7 @@ animation-delay: 5s;
     color:black;
 }
 .footer p span{
-    color: white;
+    color: lightseagreen;
     opacity: 0.8;
 }
 
