--- a/css/style.css
+++ b/css/style.css
@@ -546,8 +546,8 @@ animation-delay: 5s;
 }
 
 
-/**************  Profiles**************/
 
+/**************  Profiles**************/
 
 .profiles{
     /* margin-top: 25vh; */
@@ -592,7 +592,7 @@ animation-delay: 5s;
 
 .profiles .profileEnvironment .resume .mycv .cvButton{
     border: 1px solid black;
-    padding: 16px 24px;
+    padding: 14px 28px;
     text-decoration: none;
     display: flex;
     align-items: center;
@@ -631,7 +631,9 @@ animation-delay: 5s;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-area:links; 
-    align-items: start;
+    align-items: center;
+    justify-content: center;
+    justify-items: center;
     z-index: 90;
 }
 
@@ -640,7 +642,9 @@ animation-delay: 5s;
     display: flex;
     align-items: center;
     justify-content: start;
+
 }
+
 
 .profiles .profileEnvironment .profileLinks .linkWrap img{
     width: 30px;
@@ -652,7 +656,11 @@ animation-delay: 5s;
 .profiles .profileEnvironment .profileLinks .linkWrap a{
     text-decoration: none;
     padding: 6px;
-    color: grey;
+
+    width: 50%;
+    color: black;
+    transition: 4s;
+
 }
 
 
@@ -662,7 +670,42 @@ animation-delay: 5s;
     height: 100vh;
     width: 100%;
     background-color: #82cfdc;
-    background-image: linear-gradient(#82cfdc,rgb(0, 0, 0));
+    /* background-image: linear-gradient(#82cfdc,rgb(0, 0, 0)); */
+
+    box-shadow: 1px 2px 20px black;
+    padding: 20px;
+}
+
+
+/******Footer********/
+
+
+.footer{
+    height: 100vh;
+    width: 100%;
+    background-color: #F6F6F7;
+    padding: 40px 20px;
+
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+
+    flex-flow: column wrap;
+    gap: 30px;
+
+    position: relative;
+
+}
+
+.snowMountain{
+    position: absolute;
+    width: 100%;
+    height: auto;
+    bottom: 0;
+    left: 0;
+    opacity: 0.9;
+    z-index: 0;
 }
 
 
@@ -670,17 +713,27 @@ animation-delay: 5s;
 /*********contact *****/
 
 .contact{
-    background-color:white;
-    width: 100%;
-    height: 120vh;
+    background-color: transparent;
+    z-index: 12;
+
     overflow: hidden;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: start;
     justify-content: center;
+    padding: 20px;
+    transition: 2s;
+}
+
+.contact:hover{
+    box-shadow: 0.5px 2px 5px black;
+}
 
 
-    position: relative;
+.contact h1{
+    font-weight: 600;
+    padding: 20px;
+    color: #226b77;
 }
 
 .contact .contactEnvinonment{
@@ -688,89 +741,113 @@ animation-delay: 5s;
     height: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
+    align-items: flex-start;
 }
 
 
-.contact .contactEnvinonment .form{
-    width: 100%;
-    height: 100%;
+.contact .contactEnvinonment form{
+    display: grid;
+    grid-template-columns: 0.5fr 1fr;
+    gap: 1rem;
+    padding: 20px;
+    z-index: 1;
+    background-color: transparent;
+}
 
+
+
+button{
+    padding: 12px 24px;
+    border-radius: 50px;
+    background-color: transparent;
+    border: 2px solid grey;
+    cursor: pointer;
+}
+
+
+input{
+    border-radius: 5px;
+    height: 40px;
+    width: 20vw;
+    background-color: transparent;
+    border: 1px solid black;
+    color: var(--SEACOLOR);
+}
+
+textarea{
+    background-color: transparent;
+    border-radius: 5px;
+    padding: 12px;
+}
+
+/*   foot  */
+
+
+.foot{
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
+    align-items: start;
+    gap: 1em;
+    z-index: 10;
+    
+    height: 100%;
+    width: auto;
+    padding: 12px;
 }
 
-.contact .contactEnvinonment .form .formWrapper{
-    width: 80%;
-    height: 80%;
-    display: grid;
-    grid-template-columns: 30% 40%;
-    gap: 0.5em;
-    grid-auto-rows: 10vh;
-    justify-content: end;
-}
-
-
-.contact .contactEnvinonment .form .formWrapper label{
-    width: 40%;
-}
-
-.contact .contactEnvinonment .form .formWrapper input{
-    width: 60%;
-    height: 50%;
-}
-
-.contact img{
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    opacity: 0.9;
-}
-/******Footer********/
-
-
-.footer{
-    height: 20vh;
-    width: 100%;
-    background-color: #F6F6F7;
-
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: column wrap;
-    gap: 30px;
-}
-
-.footer .follow{
+.footer .foot .follow{
     display:flex;
     gap: 16px;
 }
-.footer .follow h4{
-    color: red;
+.footer .foot .follow h4{
     font-weight: 100;
 }
 
-.footer p{
+.footer .foot p{
     font-weight: 300;
     color:black;
 }
-.footer p span{
-    color: lightseagreen;
-    opacity: 0.8;
+.footer .foot p span{
+    color: #226b77;
 }
 
-.footer .follow a{
+.footer .foot .follow a{
     width: 30px;
 }
 
-.footer .follow img{
+.footer .foot .follow img{
     opacity: 0.6;
     border-radius: 150%;
 }
 
+.greet{
+    width: 100%;
+    display: grid;
+    grid-template-columns: auto 1fr;
+    padding: 6px;
+    place-content: center;
+}
+
+.greet .greetMessage{
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    padding: 0px 16px;    
+}
+
+.foot .greet .myPic{
+    width: 100px;
+    height: 100px;
+    border-radius: 150%;
+
+    border: 1px double #226b77;
+    box-shadow: 0.5px 1px 4px #226b77;
+    padding: 2px;
+
+    opacity: 0.9;
+}
 
 /******** Mobile Screen**********/
 
