--- a/css/style.css
+++ b/css/style.css
@@ -576,7 +576,7 @@ animation-delay: 5s;
 /**************  Profiles**************/
 
 .profiles{
-    /* margin-top: 25vh; */
+    margin-top: 20vh;
     width: 100%;
     min-height: 100vh;
     display: flex;
@@ -591,103 +591,96 @@ animation-delay: 5s;
     position: absolute;
     bottom: 0;
     left: 0;
+    z-index: -10;
 }
 
 .profiles .profileEnvironment{
-    height: 70vh;
+    height: 100vh;
     width: 100%;  
 
     display:grid;
-    grid-template-columns: repeat(6,24%);
-    grid-template-areas: "title title title title title title"
-    "cv links links links links links"
-    "cv links links links links links";
-    grid-template-rows: 8vh 40vh 40vh;
 
+    grid-template-areas: 
+    "title title title title title title"
+    "links links links links links links";
+    grid-template-rows: 8vh 80vh; 
+
+    /* background-color: brown; */
     padding:  0 40px;
-}
 
-.profiles .profileEnvironment .resume{
-    grid-area: cv;
-    height:50%;
-    display:flex;
-    align-items: start;
-    justify-content: start;
-    padding: 32px 0 0 16px;
-}
+    place-content: center;
+    grid-gap: 2em;
 
-.profiles .profileEnvironment .resume .mycv .cvButton{
-    border: 1px solid black;
-    padding: 14px 28px;
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-    opacity: 0.9;
-    font-weight: 700;
-
-    border-radius: 50px;
-}
-
-.downloadIcon{
-    padding: 0 0 0 12px;
-    width: 40px;
-    opacity: 0.6;
-    z-index: 40;
-}
-
-
-
-.profiles .profileEnvironment h1{
-    text-align: start;
-    width: 100%;
-    height: auto;
-    letter-spacing: 2px;
-    font-weight: 800;
-    font-size: 1.5rem;
-    padding-left: 20px;
-    grid-area: title;
-}
-
-.profiles .profileEnvironment .profileLinks{
-    width: 40%;
-    height: 40%;
-
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-area:links; 
-    align-items: center;
-    justify-content: center;
     justify-items: center;
-    z-index: 90;
 }
 
+.profileTitle{
+    width:70vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    grid-area: title;
+    gap: 2rem;
+}
 
 .linkWrap{
-    display: flex;
+    width: 12vw;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 10vh;
+
+    justify-content: center;
+    justify-items: start;
     align-items: center;
-    justify-content: start;
 
+    transition: 3s linear;
 }
 
-
-.profiles .profileEnvironment .profileLinks .linkWrap img{
-    width: 30px;
-    height:auto;
-    opacity: 0.7;
-}
-
-
-.profiles .profileEnvironment .profileLinks .linkWrap a{
-    text-decoration: none;
+.linkWrap img{
+    width: 40px;
     padding: 6px;
-
-    width: 50%;
-    color: black;
-    transition: 4s;
-
+    margin: 5px;
+    border-radius: 50px;
+    transition: 2s ease-in-out;
 }
+
+.profileLinks{
+    width: 80vw;
+    height: 40vh;
+    /* background-color: #8ee6fe; */
+    grid-area:links;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+
+    justify-content: center;
+    align-items: center;
+    justify-items: center;
+    
+}
+
+
+.linkWrap a{
+    text-decoration: none;
+    color: #226b77;
+    overflow: hidden;
+    width: 0px;
+    transition: 3s;
+}
+
+
+.profileTitle p{
+    width: 0%;
+    height: 3px;
+    border-radius: 10px;
+    background-color: #7DD0DE;
+    transition: 5s;
+    opacity: 0.8;
+}
+
+
+
+
 
 
 /************Project******************/
@@ -813,18 +806,14 @@ animation-delay: 5s;
     align-items: start;
     justify-content: center;
     padding: 20px;
-    transition: 2s;
     border-radius: 5px;
 }
 
-.contact:hover{
-    box-shadow: 0.5px 2px 5px black;
-}
+
 
 
 .contact h1{
     font-weight: 600;
-    padding: 20px;
     color: #226b77;
 }
 
@@ -841,22 +830,104 @@ animation-delay: 5s;
 .contact .contactEnvinonment form{
     display: grid;
     grid-template-columns: 0.5fr 1fr;
-    gap: 1rem;
+    gap: 2rem;
     padding: 20px;
     z-index: 1;
     background-color: transparent;
+    padding: 3rem 0 0 0;
+}
+
+.contact .contactEnvinonment form input{
+    width: 100%;
+    height: 35px;
+    border-radius: 2px;
+}
+.contact .contactEnvinonment form label{
+    width: 100%;
+    height: 35px;
+    border-radius: 2px;
+}
+
+.contact .contactEnvinonment form input::placeholder{
+    padding: 12px;
+    font-size: 0.8em;
+}
+.contact .contactEnvinonment form textarea::placeholder{
+    padding: 8px;
+    font-size: 0.8em;
 }
 
 
-
-button{
+ button{
     padding: 12px 24px;
-    border-radius: 50px;
     background-color: transparent;
-    border: 2px solid grey;
+    border: 1.5px solid grey;
     cursor: pointer;
+    width: 100%;
+
+    transition: 2s;
+    position: relative;
+    z-index: 1;
+    border-radius: 50px;
 }
 
+.reset::after{
+    content: '';
+    width:0%;
+    height: 100%;
+    background-color: white;
+    position: absolute;
+    top:0;
+    left:0;
+    transition: 1s linear;
+    z-index: -1;
+    overflow: hidden;
+    border-radius: 50px;
+    opacity: 0;
+}
+
+.reset:hover::after{
+    content: '';
+    width:100%;
+    height: 100%;
+    background-color: white;
+    position: absolute;
+    top:0;
+    left:0;
+    z-index: -1;
+    overflow: hidden;
+    border-radius: 50px;
+    opacity: 1;
+}
+
+.submit::after{
+    content: '';
+    width:0%;
+    height: 100%;
+    background-color: white;
+    position: absolute;
+    top:0;
+    left:0;
+    transition: 1s linear;
+    z-index: -1;
+    overflow: hidden;
+    border-radius: 50px;
+    opacity: 0;
+}
+
+.submit:hover::after{
+    content: '';
+    width:100%;
+    height: 100%;
+    background-color: white;
+    position: absolute;
+    top:0;
+    left:0;
+    z-index: -1;
+    overflow: hidden;
+    border-radius: 50px;
+    opacity: 1;
+}
 
 input{
     border-radius: 5px;
@@ -903,46 +974,55 @@ textarea{
     color:black;
 }
 
-.footer .foot p span{
-    color: #226b77;
-}
+
 
 .footer .foot .follow a{
     width: 30px;
+    opacity: 0.6;
+}
+
+.footer .foot .follow a:hover{
+    opacity: 1;
 }
 
 .footer .foot .follow img{
     border-radius: 150%;
     padding: 5px;
     background-color: transparent;
-    box-shadow: 1px 2px 5px #226b77;
+    /* box-shadow: 1px 2px 5px #226b77; */
 }
 
+.greet{
+    width: 100%;
+    height: auto;
+    display: grid;
+    grid-template-columns: auto 1fr;
+    padding: 6px;
+    place-content: center;
+    align-items: center;
+    justify-content: center;
+
+}
 
 .foot .greet .myPic{
     width: 100px;
     height: 100px;
     border-radius: 150%;
-
-    border: 1px double #226b77;
-    box-shadow: 0.5px 1px 4px #226b77;
     padding: 5px;
 
     opacity: 0.9;
 }
 
-.greet{
-    width: 100%;
-    display: grid;
-    grid-template-columns: auto 1fr;
-    padding: 6px;
-    place-content: center;
-}
+
 
 .greet .greetMessage{
     display: flex;
-    align-items: center;
-    justify-content: start;
+    width:90%;
+    height: 100px;
+
+    flex-direction: column;
+    align-items: start;
+    justify-content: space-around;
     padding: 16px 16px; 
     /* color: white; */
     /* background-color: #226b77; */
@@ -953,12 +1033,32 @@ textarea{
 
     margin: 1em;
 }
-.greet .greetMessage::before{
-    content: ' Have a Great Day !! ';
-    color: pink;
-    position: absolute;
-    bottom:-10px;
-    left: 5%;
+
+.greet .greetMessage p{
+    color:#226b77;
+    font-weight: 500;
+}
+
+.footerWish{
+    width:0%;
+    overflow: hidden;
+    transition: 5s;
+}
+
+.display{
+    width: 100px;
+    height: 100px;
+    background-color: transparent;
+    border: 1px solid grey;
+    position:fixed;
+    top: 0;
+    right: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: black;
+    font-size: 1.5em;
+    z-index: 10000;
 }
 
 /******** Mobile Screen**********/
