--- a/css/style.css
+++ b/css/style.css
@@ -581,7 +581,7 @@ animation-delay: 5s;
     z-index: 1;
 }
 
-.profiles .profileEnvironment{
+.profileEnvironment{
     height: 100vh;
     width: 100%;  
 
@@ -727,9 +727,9 @@ animation-delay: 5s;
 /************Project******************/
 
 .project{
+    min-height: 80vh;
     width: 100%;
     background-color: #7ED1DF;
-    min-height: 100vh;
     display: flex;
     overflow: hidden;
     gap: 4rem;
@@ -800,15 +800,23 @@ animation-delay: 5s;
     align-items: center;
     gap: 2rem;
     justify-content: flex-start;
-
 }
 
 .heading h3{
     color: rgb(10, 106, 103);
     width:0%;
-    height: auto;
+    height: 40px;
     overflow: hidden;
     transition: 3s;
+}
+
+.titleWrapper{
+    height: 150px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-evenly;
+
 }
 
 .projectLogo{
@@ -819,6 +827,7 @@ animation-delay: 5s;
     align-items: center;
     justify-content: center;
 }
+
 .projectLogo img{
     width: 60%;
     height: auto;
@@ -843,8 +852,6 @@ animation-delay: 5s;
     justify-content: space-between;
 
 }
-
-
 
 .techStack h3{
     display: flex;
@@ -1239,5 +1246,146 @@ animation-delay: 5s;
        bottom: 50px;
 
     }
+
+    .aboutContainer{
+        background-image: linear-gradient(#76D7F1,white);
+        width: 100%;
+        min-height: 120vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 20px;
+        overflow: hidden;
+        position: relative;
+    }
+
+    .about{
+        background-color: transparent;
+        min-height:100vh;
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(10,1fr);
+    
+        grid-template-areas: 
+        "content content content content content content"
+        "tech tech tech tech tech tech ";
+        overflow: hidden;
+    
+        padding: 32px 0 0 0;
+    
+        grid-template-rows: 50vh 50vh;
+        z-index: 1;
+
+        place-items: center;
+    }
+
+    .content{
+        align-items: center;
+    }
+    .content .aboutHeading{
+        width: 21vw;
+        transform: rotate(-90deg);
+        letter-spacing: 2px;
+        padding: 20px;
+        color: black;
+        font-size: 30px;
+        letter-spacing: 5px;
+        font-weight: 200;
+    
+        transition: 5s;
+        display: none;
+    }
+
+
+
+    .content p{
+        width: 90vw;
+        height: 0%;
+        padding: 36px;
+
+    
+        overflow: hidden;
+        transition: 5s;
+    }
+    /********profiles */
+
+    .profileEnvironment{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .myProfiles{
+        height: 40vh;
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+        bottom: 0;
+    }
+
+
+    /********Projects */
+
+    .project{
+        flex-direction: column;
+        gap: 0rem;
+        min-height: 50vh;
+    }
+
+    .projectTitles{
+        width: 100%;
+        height: 20vh;
+    }
+
+    .card{
+        height: 50vh;
+        width: 100%;
+        gap: 0;
+        padding: 0px 20px;
+        justify-content: space-evenly;
+    }
+
+    .titleWrapper{
+        flex-direction: row;
+        height: 80px;
+    }
+
+    .heading{
+        height: 10vh;
+    }
+
+
+    .projectLogo{
+        width: 90px;
+        height: 60px;
+    }
+
+    .techStack{
+        justify-content: center;
+        height: 10vh;
+    }
+
+    .techImages{
+        width: 60%;
+    }
+
+
+
+    .footer{
+        height: 25vh;
+    }
+
+    .sideBar{
+        width: 100px;
+        height: 6vh;
+        padding: 10px;
+        gap: 4px;
+    }
+
+    .sideBar a{
+        width: 20px;
+    }
+    
 
 }
