--- a/css/style.css
+++ b/css/style.css
@@ -336,7 +336,7 @@ body{
 
 .about{
     background-color: transparent;
-    min-height:100vh;
+    min-height:100%;
     width: 100%;
     display: grid;
     grid-template-columns: repeat(10,1fr);
@@ -1201,7 +1201,7 @@ animation-delay: 5s;
     }
 
     .main .topSection{
-        height: 100vh;
+        height: 90vh;
     }
 
     .main .topSection .cloud{
@@ -1272,66 +1272,13 @@ animation-delay: 5s;
     }
 
     .aboutContainer{
-        background-image: linear-gradient(#76D7F1,white);
-        width: 100%;
-        min-height: 120vh;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        padding: 20px;
-        overflow: hidden;
-        position: relative;
-    }
 
-    .about{
-        background-color: transparent;
-        min-height:100vh;
-        width: 100%;
-        display: grid;
-        grid-template-columns: repeat(10,1fr);
-    
-        grid-template-areas: 
-        "content content content content content content"
-        "tech tech tech tech tech tech ";
-        overflow: hidden;
-    
-        padding: 32px 0 0 0;
-    
-        grid-template-rows: 50vh 50vh;
-        z-index: 1;
-
-        place-items: center;
-    }
-
-    .content{
-        align-items: center;
-    }
-    .content .aboutHeading{
-        width: 21vw;
-        transform: rotate(-90deg);
-        letter-spacing: 2px;
-        padding: 20px;
-        color: black;
-        font-size: 30px;
-        letter-spacing: 5px;
-        font-weight: 200;
-    
-        transition: 5s;
-        display: none;
     }
 
 
 
-    .content p{
-        width: 90vw;
-        height: 0%;
-        padding: 36px;
 
-    
-        overflow: hidden;
-        transition: 5s;
-    }
+
     /********profiles */
 
     .profileEnvironment{
