--- a/css/style.css
+++ b/css/style.css
@@ -336,7 +336,7 @@ body{
 
 .about{
     background-color: transparent;
-    min-height:100%;
+    height:100%;
     width: 100%;
     display: grid;
     grid-template-columns: repeat(10,1fr);
@@ -407,7 +407,6 @@ body{
     display: grid;
     grid-auto-rows: 30vh;
     place-items: center;
-    
 }
 
 .tech h3{
@@ -1221,15 +1220,29 @@ animation-delay: 5s;
     }
 
     .frontPage .container{
-        top : 55%;
+        top : 50%;
         width: 80%;
     }
 
     .main .topSection .boat{
         width: 50%;
-        bottom: 42px;
-        left:0;
-        transform: rotate(-15deg);
+        bottom: 70px;
+        left:10px;
+
+        animation: swing 5s linear infinite;
+    }
+
+    @keyframes swing{
+        0%{
+            transform: rotate(0deg);
+            left: 10px;
+        }50%{
+            transform: rotate(-10deg);
+            left: 12px;
+        }100%{
+            transform: rotate(0deg);
+            left: 10px;
+        }
     }
 
     .wheel{
@@ -1272,10 +1285,50 @@ animation-delay: 5s;
     }
 
     .aboutContainer{
-
+        flex-direction: column;
+        padding: 0px;
     }
 
+    .about{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
 
+    .content{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .content .aboutHeading{
+        transform: rotate(0deg);
+        width: 300px;
+
+        font-size: 24px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .content p{
+        width: 100%;
+        padding: 10px;
+    }
+
+    .tech{
+        display: flex;
+        flex-direction: column;
+        margin-top: 20px;
+    }
+
+    .tech h3{
+        padding: 6px;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
 
 
 
