--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,8 @@ body{
     color: var(--FONT_COLOR);
     width:100vw;
     min-height: 100vh;
-    overflow-x: hidden;
+    overflow-Y: hidden;
+    transition: 4s;
 }
 
 .header{
@@ -719,24 +720,6 @@ animation-delay: 5s;
     box-shadow: 1px 1px 5px #226b77;
 }
 
-.kite{
-    position: absolute;
-    left:0vw;
-    opacity: 0.4;
-    top: 0vh;
-    transform: rotate(90deg);
-    transition: 3s;
-
-    animation: fly 50s linear infinite;
-}
-
-@keyframes fly{
-    from{
-        left:-30vw;
-    }to{
-        left:120vw;
-    }
-}
 
 
 /************Project******************/
@@ -1115,6 +1098,27 @@ animation-delay: 5s;
 .endBanner p span{
     font-size: 1em;
     font-weight: 600;
+}
+
+.loading{
+    height: 100vh;
+    width: 100vw;
+    position: absolute;
+    background-color: white;
+    z-index: 3000;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap:1rem;
+    justify-content: center;
+}
+
+.loading h1{
+    letter-spacing: 2px;
+}
+
+body{
+    overflow: hidden;
 }
 /******** Mobile Screen**********/
 
