--- a/css/style.css
+++ b/css/style.css
@@ -1111,6 +1111,7 @@ animation-delay: 5s;
     flex-direction: column;
     gap:1rem;
     justify-content: center;
+    transition: 2s;
 }
 
 .loading h1{
