--- a/css/style.css
+++ b/css/style.css
@@ -1333,6 +1333,10 @@ body{
         justify-content: center;
     }
 
+    .bubble{
+        background-color: red;
+    }
+
     /********profiles */
 
     .profiles{
@@ -1356,7 +1360,7 @@ body{
         flex-direction:column ;
         padding:0;
         justify-content: space-around;
-        transition: 5s;
+        transition: 1s;
     }
 
     .myProfiles{
@@ -1364,7 +1368,7 @@ body{
         flex-direction: column;
         width: 100%;
         height: 40vh;
-        left:-1000px;
+        left:-600px;
         transition: 2s;
     }
 
